--- a/extra_info.html
+++ b/extra_info.html
@@ -40,5 +40,8 @@
     <a href="extra_info.html">Extra Info</a>
 </br>
 <a href="mygoal.html">My Goal</a>
+</br>
+<a href="game.html">Game</a>
     </div>
+<a href="https://sdg-tracker.org/">This site has info on the SDGs</a>
 </body>
