--- a/goal91.html
+++ b/goal91.html
@@ -35,6 +35,8 @@
     <a href="extra_info.html">Extra Info</a>
 </br>
 <a href="mygoal.html">My Goal</a>
+</br>
+<a href="game.html">Game</a>
     </div>
     <h1>What is Goal 9.1?</h1>
     <p>The target of goal 9.1 is to develop infrastructure which is resilient,sustainable and inclusive.</p>
