--- a/home.html
+++ b/home.html
@@ -37,7 +37,23 @@
     <a href="extra_info.html">Extra Info</a>
 </br>
 <a href="mygoal.html">My Goal</a>
+</br>
+<a href="game.html">Game</a>
     </div>
+
+    <iframe width="560"
+        height="315" 
+        src="https://www.youtube.com/embed/3eXpBYO_oq8" 
+        frameborder="0"
+        allow="accelerometer; 
+        autoplay; 
+        clipboard-write;
+        encrypted-media; 
+        gyroscope; 
+        picture-in-picture" 
+        allowfullscreen>
+    </iframe>
+
 <div class="wig9">
     <!--All the text will be on the left hand side of the screen.-->
 <h3>What is Goal 9?</h3>
@@ -53,9 +69,10 @@
 </div>
 <div class="img1">
     <!--All the images in the website will be styled to the right of the screen in the final version-->
-    <img src="rails.png" width="200" height="200" alt="Image of Railroad">
-    <img src='cell-tower.jpg' width="100" height="100" alt="Image of Cell Tower">
+    <img src="Tracks.jpg" width=160 height=106  alt="Image of Railroad">
+    <img src='cell-tower.jpg' width=108 height= 160 alt="Image of Cell Tower">
 </div>
+
 
 <div class="goal9x">
     <!-- The links will become linked images in the final version of the website. -->
