--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
     <a href="extra_info.html">Extra Info</a>
 </br>
 <a href="mygoal.html">My Goal</a>
+</br>
+<a href="game.html">Game</a>
     </div>
+<div video1>
+    <iframe 
+    width="560"
+     height="315"
+      src="https://www.youtube.com/embed/qulgLyhvxEM"
+       frameborder="0" allow="accelerometer; 
+       autoplay; clipboard-write; encrypted-media; 
+       gyroscope; 
+       picture-in-picture" 
+       allowfullscreen>
+    </iframe>
+</div>
 <div class="clickText">
 <h2>Click on the links to learn about Goal 9.</h2>
 </div>
