--- a/goal92.html
+++ b/goal92.html
@@ -27,15 +27,17 @@
 
         <div id="txt"></div>
     <body>
-    <div class="menu">
-        <a href="home.html">Goal 9</a>
+        <div class="menu">
+            <a href="home.html">Goal 9</a>
+        </br>
+        <a href="help.html">Help</a>
     </br>
-    <a href="help.html">Help</a>
-</br>
-    <a href="extra_info.html">Extra Info</a>
-</br>
-<a href="mygoal.html">My Goal</a>
-    </div>
+        <a href="extra_info.html">Extra Info</a>
+    </br>
+    <a href="mygoal.html">My Goal</a>
+    </br>
+    <a href="game.html">Game</a>
+        </div>
         <h1>What is Goal 9.2?</h1>
 </br>
         <h3>Goal 9.2 is </h3>
