--- a/goal9b.html
+++ b/goal9b.html
@@ -27,15 +27,17 @@
 
         <div id="txt"></div>
     <body>
-    <div class="menu">
-        <a href="home.html">Goal 9</a>
+        <div class="menu">
+            <a href="home.html">Goal 9</a>
+        </br>
+        <a href="help.html">Help</a>
     </br>
-    <a href="help.html">Help</a>
-</br>
-    <a href="extra_info.html">Extra Info</a>
-</br>
-<a href="mygoal.html">My Goal</a>
-    </div>
+        <a href="extra_info.html">Extra Info</a>
+    </br>
+    <a href="mygoal.html">My Goal</a>
+    </br>
+    <a href="game.html">Game</a>
+        </div>
     <div class="goal9x">
         <a href="goal91.html">Goal 9.1</a>
         </br>
