--- a/help.html
+++ b/help.html
@@ -11,6 +11,7 @@
           var h = today.getHours();
           var m = today.getMinutes();
           var s = today.getSeconds();
+          h = checkTime(h)
           m = checkTime(m);
           s = checkTime(s);
           document.getElementById('txt').innerHTML =
@@ -37,5 +38,9 @@
     <a href="extra_info.html">Extra Info</a>
 </br>
 <a href="mygoal.html">My Goal</a>
+</br>
+<a href="game.html">Game</a>
     </div>
+<h1>Help Page!</h1>
+<h3>If you need help with anything contact me at vahmanisreal@notmyemail.com</h3>
 </body>
