--- a/mygoal.html
+++ b/mygoal.html
@@ -28,15 +28,17 @@
         <div id="txt"></div>
 
     <body>
-<div class="menu">
-        <a href="home.html">Goal 9</a>
+        <div class="menu">
+            <a href="home.html">Goal 9</a>
+        </br>
+        <a href="help.html">Help</a>
     </br>
-    <a href="help.html">Help</a>
-</br>
-    <a href="extra_info.html">Extra Info</a>
-</br>
-<a href="mygoal.html">My Goal</a>
-    </div>
+        <a href="extra_info.html">Extra Info</a>
+    </br>
+    <a href="mygoal.html">My Goal</a>
+    </br>
+    <a href="game.html">Game</a>
+        </div>
 <h1>My Belief Statement</h1>
 <h3>One of the most important things in for everyone to have access to is proper infrastructure. In Canada many people have access to roads and internet as well as other important things. However in some other places people might not have access to these things. This makes their lives significantly more difficult. Simple things such as roads can significantly improve one's live. If a farmer wanted to grow crops to sell them they would have to transport it to a market. With roads and proper equipment this would be very easy for them to do. However without roads they would have to  </h3>
 
