--- a/game.html
+++ b/game.html
@@ -21,10 +21,10 @@
     </div>
       <script src="sketch.js"></script>
       <div class="StoryText">
-    <h1>You own a small farm on an island. You just harvested some crops and are going on your way to sell them.
+    <!-- <h1>You own a small farm on an island. You just harvested some crops and are going on your way to sell them.
         However when you get to the old bridge it has collapsed from the harsh winds that blew through a few days ago.
         Now you have no access to the mainland and cannot sell your crops to earn some money.
-    </h1>
+    </h1> -->
 </div>
 
 </body>
