--- a/extra_info.html
+++ b/extra_info.html
@@ -4,44 +4,61 @@
     type = "text/css"
     href = "style.css" />
     <title>Extra Info</title>
-    <link rel="icon" href="gible.png">
-    <script>
-        function startTime() {
-          var today = new Date();
-          var h = today.getHours();
-          var m = today.getMinutes();
-          var s = today.getSeconds();
-          m = checkTime(m);
-          s = checkTime(s);
-          document.getElementById('txt').innerHTML =
-          h + ":" + m + ":" + s;
-          var t = setTimeout(startTime, 500);
-        }
-        function checkTime(i) {
-          if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-          return i;
-        }
-        </script>
+    <link rel="stylesheet"
+href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+ crossorigin="anonymous">
+    
 </head>
 <body>
-    <body onload="startTime()">
+      <!--Creating the Navbar for the site-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--Making the home button send the user to the home page-->
+        <a class="navbar-brand" href="#">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--Making the div to put elements of the navbar in-->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <!--Adding the extra info page to the navbar for easy access-->
+            <li class="nav-item active">
+              <a class="nav-link" href="extra_info.html">Extra Info <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This is adds the help page to the navbar so that is can be easily found-->
+            <li class="nav-item active">
+              <a class="nav-link" href="help.html">Help Page <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This leads to the page with my belief statement-->
+            <li class="nav-item active">
+              <a class="nav-link" href="mygoal.html">My Goal <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This leads to the page about Goal 9-->
+            <li class="nav-item active">
+              <a class="nav-link" href="home.html">Goal 9</a>
+            </li>
+            <!--This is a dropdown menu which has all the subgoals of goal 9-->
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sub Goals
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="goal91.html">Goal 9.1</a>
+                <a class="dropdown-item" href="goal92.html">Goal 9.2</a>
+                <a class="dropdown-item" href="goal93.html">Goal 9.3</a>
+                <a class="dropdown-item" href="goal94.html">Goal 9.4</a>
+                <a class="dropdown-item" href="goal95.html">Goal 9.5</a>
+                <a class="dropdown-item" href="goal9a.html">Goal 9.A</a>
+                <a class="dropdown-item" href="goal9b.html">Goal 9.B</a>
+                <a class="dropdown-item" href="goal9c.html">Goal 9.C</a>
+                <div class="dropdown-divider"></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-        <div id="txt"></div>
-    <body>
-    <div class="">
-        <h1>Extra Info</h1>
-    </div>
-    
-    <div class="menu">
-        <a href="home.html">Goal 9</a>
-    </br>
-    <a href="help.html">Help</a>
-</br>
-    <a href="extra_info.html">Extra Info</a>
-</br>
-<a href="mygoal.html">My Goal</a>
-</br>
-<a href="game.html">Game</a>
-    </div>
-<a href="https://sdg-tracker.org/">This site has info on the SDGs</a>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
