--- a/home.html
+++ b/home.html
@@ -4,93 +4,110 @@
     type = "text/css"
     href = "style.css" />
     <title>Goal 9</title>
-    <link rel="icon" href="gible.png">
-    <script>
-        function startTime() {
-          var today = new Date();
-          var h = today.getHours();
-          var m = today.getMinutes();
-          var s = today.getSeconds();
-          m = checkTime(m);
-          s = checkTime(s);
-          document.getElementById('txt').innerHTML =
-          h + ":" + m + ":" + s;
-          var t = setTimeout(startTime, 500);
-        }
-        function checkTime(i) {
-          if (i < 10) {i = "0" + i};  
-          return i;
-        }
-        </script>
+    <link rel="stylesheet"
+href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+ crossorigin="anonymous">
+    
 </head>
 <body>
-    <body onload="startTime()">
+      <!--Creating the Navbar for the site-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--Making the home button send the user to the home page-->
+        <a class="navbar-brand" href="#">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--Making the div to put elements of the navbar in-->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <!--Adding the extra info page to the navbar for easy access-->
+            <li class="nav-item active">
+              <a class="nav-link" href="extra_info.html">Extra Info <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This is adds the help page to the navbar so that is can be easily found-->
+            <li class="nav-item active">
+              <a class="nav-link" href="help.html">Help Page <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This leads to the page with my belief statement-->
+            <li class="nav-item active">
+              <a class="nav-link" href="mygoal.html">My Goal <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This leads to the page about Goal 9-->
+            <li class="nav-item active">
+              <a class="nav-link" href="home.html">Goal 9</a>
+            </li>
+            <!--This is a dropdown menu which has all the subgoals of goal 9-->
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sub Goals
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="goal91.html">Goal 9.1</a>
+                <a class="dropdown-item" href="goal92.html">Goal 9.2</a>
+                <a class="dropdown-item" href="goal93.html">Goal 9.3</a>
+                <a class="dropdown-item" href="goal94.html">Goal 9.4</a>
+                <a class="dropdown-item" href="goal95.html">Goal 9.5</a>
+                <a class="dropdown-item" href="goal9a.html">Goal 9.A</a>
+                <a class="dropdown-item" href="goal9b.html">Goal 9.B</a>
+                <a class="dropdown-item" href="goal9c.html">Goal 9.C</a>
+                <div class="dropdown-divider"></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!--This is a jumbotron-->
+      <div class="jumbotron">
+        <h1 class="display-4">Hello!</h1>
+        <h3 class="lead">This is a page in which you can learn more about goal 9. </h3>
+        <hr class="my-4">
+        <p>:)</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="mygoal.html" role="button">My Goal</a>
+        </p>
+      </div>
+      <!--This is an image carousel-->
+      <div id="infrastructure_slides" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#infrastructure_slides" data-slide-to="0" class="active"></li>
+          <li data-target="#infrastructure_slides" data-slide-to="1"></li>
+          <li data-target="#infrastructure_slides" data-slide-to="2"></li>
+        </ol>
+        <!--This makes the individual images in the carousel-->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="Chad_Roads.png" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="cell-tower.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="Tracks.jpg" alt="Third slide">
+          </div>
+        </div>
+        <!--This makes the previous and next buttons to see the pictures instead of waiting for it to pass by-->
+        <a class="carousel-control-prev" href="#infrastructure_slides" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#infrastructure_slides" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class="goal9card">
+        <div class="goal9card-text">
+          Goal 9 is one of the SDG goals. Build resilient infrastructure, promote inclusive and sustainable industrialization and foster innovation. Taken from the Goal 9 page on the UN website. Why is this important? Goal 9 is important because it aims to help everyone have access to the 
+          infrastructure they need. This can include basic needs such as roads or sewage systems. But it also includes having internet and phone access. Many of these we take for granted as we have them, and can always use them. But for many people around the world that isn't true. For example 
+          in Chad on 0.8% of their roads are paved. This makes it very difficult for people to be able to travel from one place to another. Because of this it can be hard to get certain goods that someone need. It can even cause it to be hard for someone to get to their school. Poor infrastructure
+          might seem like it only affects somethings which may not be necessary but it is important as it allows people to get other useful things because of it.
+        </div>
+      </div>
 
-        <div id="txt"></div>
-    <body>
-    <h1>Goal 9</h1>
-    <div class="menu">
-        <a href="home.html">Goal 9</a>
-    </br>
-    <a href="help.html">Help</a>
-</br>
-    <a href="extra_info.html">Extra Info</a>
-</br>
-<a href="mygoal.html">My Goal</a>
-</br>
-<a href="game.html">Game</a>
-    </div>
 
-    <iframe width="560"
-        height="315" 
-        src="https://www.youtube.com/embed/3eXpBYO_oq8" 
-        frameborder="0"
-        allow="accelerometer; 
-        autoplay; 
-        clipboard-write;
-        encrypted-media; 
-        gyroscope; 
-        picture-in-picture" 
-        allowfullscreen>
-    </iframe>
-
-<div class="wig9">
-    <!--All the text will be on the left hand side of the screen.-->
-<h3>What is Goal 9?</h3>
-<p>Goal 9: Build resilient infrastructure, promote inclusive and sustainable industrialization and foster innovation</p>
-<h3>Why is Goal 9 important?</h3>
-<p>Many people around the world do not have access to proper infrastructure. </p>
-<p>Because of this there are many things that they cannot do which you might take for granted.</p>
-<p>Without access to some key things such as roads, people can't improve their situation in life.</p>
-<p>Using the above example of roads, if you didn't have roads you cannot transport goods to other places.</p>
-<p>This would stop you from being able to make money since you can't sell your product.</p>
-<p>There are many other important bits of infrastructure that many people don't have.</p>
-<p>By acheiveing this goal we can pave the road to other goals we need to acheive.</p>
-</div>
-<div class="img1">
-    <!--All the images in the website will be styled to the right of the screen in the final version-->
-    <img src="Tracks.jpg" width=160 height=106  alt="Image of Railroad">
-    <img src='cell-tower.jpg' width=108 height= 160 alt="Image of Cell Tower">
-</div>
-
-
-<div class="goal9x">
-    <!-- The links will become linked images in the final version of the website. -->
-    <a href="goal91.html">Goal 9.1</a>
-    </br>
-    <a href="goal92.html">Goal 9.2</a>
-    </br>
-    <a href="goal93.html">Goal 9.3</a>
-    </br>
-    <a href="goal94.html">Goal 9.4</a>
-    </br>
-    <a href="goal95.html">Goal 9.5</a>
-    </br>
-    <a href="goal9a.html">Goal 9.a</a>
-    </br>
-    <a href="goal9b.html">Goal 9.b</a>
-    </br>
-    <a href="goal9c.html">Goal 9.c</a>
-    </br>
-</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+    
