--- a/mygoal.html
+++ b/mygoal.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <head>
     <title>My Goal</title>
-    <link rel = "stylesheet"
-        type = "text/css"
-        href = "style.css" />
-        <script>
-            function startTime() {
-              var today = new Date();
-              var h = today.getHours();
-              var m = today.getMinutes();
-              var s = today.getSeconds();
-              m = checkTime(m);
-              s = checkTime(s);
-              document.getElementById('txt').innerHTML =
-              h + ":" + m + ":" + s;
-              var t = setTimeout(startTime, 500);
-            }
-            function checkTime(i) {
-              if (i < 10) {i = "0" + i};  
-              return i;
-            }
-            </script>
+    <link rel="stylesheet"
+href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+ crossorigin="anonymous">
+    
 </head>
 <body>
-    <body onload="startTime()">
-
-        <div id="txt"></div>
-
-    <body>
-        <div class="menu">
-            <a href="home.html">Goal 9</a>
-        </br>
-        <a href="help.html">Help</a>
-    </br>
-        <a href="extra_info.html">Extra Info</a>
-    </br>
-    <a href="mygoal.html">My Goal</a>
-    </br>
-    <a href="game.html">Game</a>
+      <!--Creating the Navbar for the site-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!--Making the home button send the user to the home page-->
+        <a class="navbar-brand" href="#">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!--Making the div to put elements of the navbar in-->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <!--Adding the extra info page to the navbar for easy access-->
+            <li class="nav-item active">
+              <a class="nav-link" href="extra_info.html">Extra Info <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This is adds the help page to the navbar so that is can be easily found-->
+            <li class="nav-item active">
+              <a class="nav-link" href="help.html">Help Page <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This leads to the page with my belief statement-->
+            <li class="nav-item active">
+              <a class="nav-link" href="mygoal.html">My Goal <span class="sr-only">(current)</span></a>
+            </li>
+            <!--This leads to the page about Goal 9-->
+            <li class="nav-item active">
+              <a class="nav-link" href="home.html">Goal 9</a>
+            </li>
+            <!--This is a dropdown menu which has all the subgoals of goal 9-->
+            <li class="nav-item dropdown active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sub Goals
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="goal91.html">Goal 9.1</a>
+                <a class="dropdown-item" href="goal92.html">Goal 9.2</a>
+                <a class="dropdown-item" href="goal93.html">Goal 9.3</a>
+                <a class="dropdown-item" href="goal94.html">Goal 9.4</a>
+                <a class="dropdown-item" href="goal95.html">Goal 9.5</a>
+                <a class="dropdown-item" href="goal9a.html">Goal 9.A</a>
+                <a class="dropdown-item" href="goal9b.html">Goal 9.B</a>
+                <a class="dropdown-item" href="goal9c.html">Goal 9.C</a>
+                <div class="dropdown-divider"></div>
+              </div>
+            </li>
+          </ul>
         </div>
-<h1>My Belief Statement</h1>
-<h3>One of the most important things in for everyone to have access to is proper infrastructure. In Canada many people have access to roads and internet as well as other important things. However in some other places people might not have access to these things. This makes their lives significantly more difficult. Simple things such as roads can significantly improve one's live. If a farmer wanted to grow crops to sell them they would have to transport it to a market. With roads and proper equipment this would be very easy for them to do. However without roads they would have to  </h3>
-
+      </nav>
+   <h4>I believe that everybody should have access to proper infrastructure. Roads are a piece of infrastructure which are crucial to being able to do many things much easier. Roads can help with travel but they are also able to help people with the transport of goods such as crops the harvested. Bridges are another form of infrastructure. Without bridges travelling from places seperated by water can be very difficult to do. Cell towers are also infrastructure. They can help us with being able to communicate with other who are far away. The internet can also be considered to be infrastructure. It allows people to do many things such as see things like traffic or learn more about a topic. Proper infrastructure lets us do many things. Without it you can see that our lives would be much harder. This is why we need to make sure that everybody has access to proper infrastructure.
+  </h4>   
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
